feat: optimize code